# MultiAgentSiliconSampling

./: .gitignore  Initial Eval Script.py  README.md  analyze_silicon_sample.py  requirements.txt  test_moderation.py
concordia_moderator/: README.md  moderation_log.jsonl  pyproject.toml  settings.yaml
concordia_moderator/concordia_moderator/: __init__.py  config.py  memory.py  prompts.py  types.py
concordia_moderator/concordia_moderator/agents/: persona.py
concordia_moderator/concordia_moderator/checks/: moderator_checks.py
concordia_moderator/concordia_moderator/embeddings/: base.py
concordia_moderator/concordia_moderator/gm/: moderator_gm.py
concordia_moderator/concordia_moderator/llm/: base.py  openai_chat.py
concordia_moderator/concordia_moderator/runners/: cli.py  demo_openai.py
concordia_moderator/concordia_moderator/utils/: cluster.py  logging_utils.py
concordia_moderator/embeddings/: openai.py
concordia_moderator/index/: base.py  faiss_index.py
concordia_moderator/tests/: test_checks.py  test_gm.py
demo/: silicon_sampling.py  validate_silicon_against_surveys.py
demo2/: inspect_demographics.py  inspect_silicon.py  map_silicon_demographics.py  plot_validation_per_question.py  validate_silicon_against_surveys.py
demo2/validation_results/: similarity_results.csv  subgroup_results.csv
